--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,16 @@ server.port=8082
 
 spring.application.name=store
 
+jwt.secret=tu_llave_super_secreta_de_al_menos_32_caracteres
+jwt.expiration=3600000
+
 spring.datasource.url=jdbc:sqlserver://localhost;instanceName=SQLEXPRESS;databaseName=galaxy;encrypt=false;trustServerCertificate=true
 spring.datasource.username=sa
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # Opcional: Configuración de JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 # Conservar la nomenclatura de las tablas y columnas en las entidades para la bd
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
