--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,11 @@ spring.datasource.password=123456
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 # Opcional: Configuración de JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
+
 # Conservar la nomenclatura de las tablas y columnas en las entidades para la bd
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2016Dialect
+spring.jpa.properties.hibernate.column_ordering_strategy=legacy
 
